# lkjstr

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  _headers  compose.yaml  docker-compose.yml  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  prettier.config.js  svelte.config.js  vite.config.ts  wrangler.jsonc
crates/lkjstr-app/: Cargo.toml  README.md
crates/lkjstr-app/src/: README.md  cache_display.rs  feed_policy.rs  hydration_priority.rs  lib.rs  profile_history.rs  protected_account.rs  read_availability.rs  startup_snapshots.rs  storage_maintenance.rs  surface_startup_policy.rs  workspace_defaults.rs  workspace_runtime.rs
crates/lkjstr-app/tests/: README.md  author_context_feed_test.rs  author_context_input_test.rs  author_context_support.rs  cache_display_test.rs  custom_request_feed_geometry_test.rs  custom_request_feed_test.rs  custom_request_plan_test.rs  custom_request_relay_limits_test.rs  custom_request_test.rs  feed_action_event_rows_test.rs  feed_geometry_model_keys_test.rs  feed_policy_test.rs  feed_runtime_lifecycle_test.rs  feed_runtime_test.rs  feed_scan_hint_status_test.rs  feed_surface_input_test.rs  feed_tool_input_test.rs  feed_top_anchor_test.rs  feed_view_model_test.rs  feed_window_test.rs  followees_view_test.rs  global_feed_paging_test.rs  global_feed_test.rs  home_feed_relay_test.rs  home_feed_status_test.rs  home_feed_test.rs  hydration_priority_test.rs  notifications_feed_paging_test.rs  notifications_feed_relay_test.rs  notifications_feed_test.rs  profile_feed_recovery_test.rs  profile_feed_test.rs  profile_header_test.rs  profile_history_test.rs  profile_sparse_feed_test.rs  protected_account_feed_test.rs  protected_account_states_test.rs  public_chat_demand_test.rs  public_chat_queries_test.rs  (+17 more)
crates/lkjstr-domain/: Cargo.toml  README.md
crates/lkjstr-domain/src/: README.md  accounts.rs  lib.rs  local_account.rs  npub_miner.rs
crates/lkjstr-domain/tests/: README.md  accounts_test.rs  feed_lod_test.rs  new_tab_catalog_test.rs  public_chat_reducer_test.rs  relay_sets_test.rs  tweet_draft_test.rs  upload_settings_test.rs  workspace_move_test.rs  workspace_snapshot_test.rs  workspace_test.rs
crates/lkjstr-protocol/: Cargo.toml  README.md
crates/lkjstr-protocol/src/: README.md  blossom.rs  bytes.rs  client_tag.rs  content_media.rs  content_mentions.rs  content_tags.rs  crypto.rs  error.rs  event.rs  event_builders.rs  event_id.rs  event_reference_parts.rs  event_reference_scan.rs  event_reference_types.rs  event_references.rs  event_sign.rs  event_tags.rs  event_verify.rs  filter.rs  follow_list.rs  groups.rs  groups_tags.rs  groups_types.rs  kinds.rs  lib.rs  message_parts.rs  messages.rs  nip19.rs  nip19_encode.rs  nip19_tlv.rs  nip30.rs  nip36.rs  nip51.rs  nip57.rs  nip65.rs  nip96.rs  nip98.rs  public_chat.rs  public_chat_metadata.rs  (+3 more)
crates/lkjstr-protocol/tests/: README.md  blossom_test.rs  bytes_test.rs  client_tag_test.rs  content_media_test.rs  content_mentions_test.rs  content_tags_test.rs  crypto_test.rs  event_builders_test.rs  event_references_test.rs  event_test.rs  filter_test.rs  follow_list_test.rs  groups_test.rs  kinds_test.rs  messages_test.rs  nip19_test.rs  nip30_test.rs  nip36_test.rs  nip51_test.rs  nip57_test.rs  nip65_test.rs  nip96_test.rs  nip98_test.rs  public_chat_test.rs  relay_url_test.rs  tags_reactions_test.rs
crates/lkjstr-storage/: Cargo.toml  README.md
crates/lkjstr-storage/src/: README.md  accounts.rs  active_account.rs  app_log.rs  commands.rs  data_class.rs  diagnostics.rs  events.rs  feed_cache.rs  feed_cache_ledger.rs  jobs.rs  ledger.rs  lib.rs  local_secrets.rs  manifest.rs  notifications.rs  outcome.rs  pressure.rs  relay_sets.rs  resource.rs  route_blocks.rs  search.rs  settings.rs  settings_defs.rs  settings_schema.rs  stats.rs  stats_rows.rs  storage_health.rs  tab_state.rs  table_specs.rs  tweet_drafts.rs  workspace.rs
crates/lkjstr-storage/tests/: README.md  accounts_test.rs  active_account_test.rs  commands_diagnostics_test.rs  commands_event_cache_test.rs  commands_feed_cache_test.rs  commands_metadata_coverage_test.rs  commands_optimizer_test.rs  commands_protected_test.rs  commands_repair_test.rs  commands_retention_test.rs  commands_search_test.rs  commands_shape_test.rs  commands_test.rs  diagnostic_sql_statements_test.rs  diagnostics_sqlite_rows_test.rs  event_cache_sqlite_rows_test.rs  feed_cache_sqlite_rows_test.rs  geometry_rows_test.rs  ledger_test.rs  manifest_docs_test.rs  manifest_test.rs  notifications_sqlite_rows_test.rs  outcome_test.rs  pressure_test.rs  protected_sqlite_rows_test.rs  relay_sets_test.rs  repair_probe_test.rs  repair_test.rs  retention_test.rs  search_test.rs  settings_schema_test.rs  settings_test.rs  sql_schema_test.rs  sql_statement_catalog_test.rs  stats_browser_rows_test.rs  stats_byte_rows_test.rs  stats_geometry_test.rs  stats_optimizer_test.rs  stats_readiness_test.rs  (+5 more)
crates/lkjstr-ui/: Cargo.toml  README.md
crates/lkjstr-ui/src/: README.md  app.rs  lib.rs  workspace.rs
crates/lkjstr-ui/tests/: README.md  author_context_provider_test.rs  custom_request_provider_test.rs  followees_provider_test.rs  global_provider_test.rs  notifications_provider_test.rs  profile_follow_provider_test.rs  search_provider_test.rs  thread_provider_test.rs  user_timeline_provider_test.rs
crates/lkjstr-web/: Cargo.toml  README.md  webdriver.json
crates/lkjstr-web/src/: README.md  accounts_active.rs  accounts_host.rs  accounts_nip07_host.rs  accounts_reveal_host.rs  accounts_selector_host.rs  accounts_selector_status.rs  accounts_selector_store.rs  app_log_host.rs  author_context_cache.rs  author_context_geometry.rs  author_context_host.rs  author_context_island.rs  author_context_relay.rs  author_context_relay_input.rs  author_context_relay_model.rs  author_context_relay_read.rs  author_context_relay_read_tail.rs  author_context_relay_test_api.rs  author_context_routes.rs  author_context_selected_relays.rs  browser_inventory.rs  custom_request_geometry.rs  (+165 more)
(+2815 files in other folders)
