[workspace]
members = [
  "crates/lkjstr-domain",
  "crates/lkjstr-protocol",
  "crates/lkjstr-xtask",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
publish = false
version = "0.0.0"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unwrap_used = "deny"
