[package]
name = "lkjstr"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
path = "crates/lkjstr-web/src/lib.rs"

[workspace]
default-members = ["."]
members = [
  ".",
  "crates/lkjstr-app",
  "crates/lkjstr-domain",
  "crates/lkjstr-protocol",
  "crates/lkjstr-relays",
  "crates/lkjstr-storage",
  "crates/lkjstr-ui",
  "crates/lkjstr-web",
  "crates/lkjstr-xtask",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
publish = false
version = "0.0.0"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unwrap_used = "deny"

[lints]
workspace = true

[dependencies]
js-sys = "0.3.82"
lkjstr-app = { path = "crates/lkjstr-app" }
lkjstr-domain = { path = "crates/lkjstr-domain" }
lkjstr-storage = { path = "crates/lkjstr-storage" }
lkjstr-ui = { path = "crates/lkjstr-ui" }
lkjstr-protocol = { path = "crates/lkjstr-protocol" }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.145"
wasm-bindgen = "0.2.122"
wasm-bindgen-futures = "0.4.52"
web-sys = { version = "0.3.82", features = [
  "DomException",
  "DomStringList",
  "Event",
  "IdbDatabase",
  "IdbFactory",
  "IdbIndex",
  "IdbObjectStore",
  "IdbObjectStoreParameters",
  "IdbOpenDbRequest",
  "IdbRequest",
  "IdbTransaction",
  "IdbTransactionMode",
  "Location",
  "MessageEvent",
  "Storage",
  "Window",
  "Worker",
  "WorkerOptions",
  "WorkerType",
] }
