[package]
name = "lkjstr-app"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
lkjstr-domain = { path = "../lkjstr-domain" }
lkjstr-protocol = { path = "../lkjstr-protocol" }
lkjstr-relays = { path = "../lkjstr-relays" }
lkjstr-storage = { path = "../lkjstr-storage" }
serde_json = "1.0.145"
