[package]
name = "lkjstr-domain"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
lkjstr-protocol = { path = "../lkjstr-protocol" }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.145"
