[package]
name = "lkjstr-protocol"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
secp256k1 = { version = "0.31.1", features = ["rand"] }
sha2 = "0.10.9"
