[package]
name = "lkjstr-protocol"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bech32 = "0.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
secp256k1 = { version = "0.31.1", features = ["rand"] }
sha2 = "0.10.9"
url = "2.5.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
