[package]
name = "lkjstr-protocol"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
base64 = "0.22.1"
bech32 = "0.11.1"
k256 = { version = "0.13.4", default-features = false, features = ["schnorr"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
url = "2.5.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
getrandom02 = { package = "getrandom", version = "0.2.17", features = ["js"] }
