[package]
name = "lkjstr-storage"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
lkjstr-domain = { path = "../lkjstr-domain" }
lkjstr-protocol = { path = "../lkjstr-protocol" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
