[package]
name = "lkjstr-ui"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
leptos = { version = "0.8.12", features = ["csr"] }
lkjstr-app = { path = "../lkjstr-app" }
lkjstr-domain = { path = "../lkjstr-domain" }
lkjstr-storage = { path = "../lkjstr-storage" }
send_wrapper = "0.6.0"
serde_json = "1.0.145"
web-sys = { version = "0.3.82", features = ["Element", "HtmlElement", "NodeList", "ResizeObserver"] }
