[package]
name = "lkjstr-web"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
lkjstr-protocol = { path = "../lkjstr-protocol" }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.145"
wasm-bindgen = "0.2.122"

[dev-dependencies]
wasm-bindgen-test = "0.3.72"
