[package]
name = "lkjstr-web"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
futures = "0.3.31"
js-sys = "0.3.82"
lkjstr-app = { path = "../lkjstr-app" }
lkjstr-domain = { path = "../lkjstr-domain" }
lkjstr-storage = { path = "../lkjstr-storage" }
lkjstr-ui = { path = "../lkjstr-ui" }
lkjstr-protocol = { path = "../lkjstr-protocol" }
lkjstr-relays = { path = "../lkjstr-relays" }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.145"
send_wrapper = "0.6.0"
wasm-bindgen = "0.2.122"
wasm-bindgen-futures = "0.4.52"
web-sys = { version = "0.3.82", features = [
  "DomException",
  "DomStringList",
  "Event",
  "IdbDatabase",
  "IdbFactory",
  "IdbIndex",
  "IdbObjectStore",
  "IdbObjectStoreParameters",
  "IdbOpenDbRequest",
  "IdbRequest",
  "IdbTransaction",
  "IdbTransactionMode",
  "Location",
  "MessageEvent",
  "Response",
  "Storage",
  "WebSocket",
  "Window",
  "Worker",
  "WorkerOptions",
  "WorkerType",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.72"
web-sys = { version = "0.3.82", features = ["Blob", "Document", "DomRect", "Element", "EventInit", "HtmlElement", "HtmlInputElement", "HtmlTextAreaElement", "NodeList", "Storage", "Url", "Window"] }
